<resources>
    <string name="app_name">TimeToWork</string>
    <string name="IniciodeSesión">Inicio de Sesión</string>
    <string name="Usuario">Usuario</string>
    <string name="logo">logo</string>
    <string name="user">User</string>
    <string name="contraseña">Contraseña:</string>
    <string name="password">Password</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="olvidasteTuContraseña"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="nuevaEmpresa">Nueva Empresa</string>
    <string name="CrearCuenta">Crear cuenta de Empresa</string>
    <string name="nombreEmpresa">Nombre Empresa</string>
    <string name="nombreAdmin">Nombre Admin</string>
    <string name="numerosEmpleados">Nº Empleados</string>
    <string name="pais">País:</string>
    <string name="provincia">Provincia:</string>
    <string name="ciudad">Ciudad</string>
    <string name="repetirContraseña">Repetir Contraseña:</string>
    <string name="terminosDeUso">Estoy de acuerdo con los <FONT COLOR="blue"><u><i>términos de uso</i></u></FONT></string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="country">Country</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="nameAdmin">Name Admin</string>
    <string name="nameCompany">Name Company</string>
    <string name="reestablecerContrasena">Reestablecer Contraseña</string>
    <string name="solicitarContrasena">Solicitar Contraseña</string>
    <string name="fechaUsrProfile">Fecha:</string>
    <string name="userProfile">Usuario:</string>
    <string name="fechaInUsrProfile" />
    <string name="HoraOutUsrProfile">Hora Salida:</string>
    <string name="horaInUsrProfile">Hora Entrada:</string>
    <string name="ficharEntrada">Fichar Entrada</string>
    <string name="ficharSalida">Fichar Salida</string>
    <string name="mensajes">Mensajes</string>
    <string name="horario">Horario</string>
    <string name="perfil">Perfil</string>
    <string name="CIF">CIF</string>
    <string name="emailCrearcuenta">email</string>
    <string name="txtCorreo">Correo</string>
    <string name="telefonoEmpresa">Telefono:</string>
    <string name="NumeroTelefono">Número de telefono</string>
    <string name="direccion">Dirección</string>
    <string name="centrotrabajo">Centro de Trabajo</string>
    <string name="establecerDatos">Establecer datos</string>
    <string name="gestionUsuarios">Gestión de Empleados</string>
    <string name="volver">Volver</string>
    <string name="perfilPerAdm">Perfil:</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="listaUsuarios">Lista de Empleados</string>
    <string name="nuevoUsuario">Nuevo Empleado</string>
    <string name="nombreEmpleado">Nombre Empleado</string>
    <string name="apelidosEmpleado">Apellidos</string>
    <string name="apellidoHint">Apellido</string>
    <string name="direccionEmpleado">Dirección:</string>
    <string name="direccionHint">Dirección</string>
    <string name="centroDeTrabajo">Centro de Trabajo:</string>
    <string name="centroTrabajoHint">Centro de Trabajo</string>
    <string name="fechaNacimineto">Fecha de Nacimiento:</string>
    <string name="fechaNacimientoHint">dd/mm/yy</string>
    <string name="repetirPassNuevEmp">Password</string>
    <string name="repetirPassGesUs">Password</string>
    <string name="eliminarUsGesUs">Eliminar Usuario</string>
    <string name="informeHoras">Informe</string>
    <string name="dirEmpNuevEmp">Dirección</string>
    <string name="nombreContList">Nombre:</string>
    <string name="apellidosContList">Apellidos:</string>
    <string name="centroContList">"Centro de Trabajo: "</string>
    <string name="informHoras">Informe de horas trabajadas</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="horariosTitle">"Horarios: "</string>
    <string name="verMesHorSel">Ver Mes</string>
    <string name="fijarJornada">Fijar Jornada</string>
    <string name="desdeFecha">Desde fecha:</string>
    <string name="fechaFijJor">YYYY-MM-DD</string>
    <string name="hastaFecha">Hasta fecha:</string>
    <string name="radLunesFijJor">Lunes</string>
    <string name="radMartesFijJor">Martes</string>
    <string name="radMiercolesFijJor">Miercoles</string>
    <string name="radJuevesFijJor">Jueves</string>
    <string name="radViernesFijJor">Viernes</string>
    <string name="radSabadoFijJor">Sabado</string>
    <string name="radDomingoFijJor">Domingo</string>
    <string name="selecDiasFijJor">Días:</string>
    <string name="selecEmpleadoFijJor">Seleccionar empleado:</string>
    <string name="horaEntradaFijJor">Hora Entrada:</string>
    <string name="horaSalidaFijJor">Hora Salida:</string>
    <string name="horaFijJor">HH:MM:SS</string>
    <string name="elegirEmpleado">Elegir empleado</string>
    <string name="eliminarJornada">Borrar Jornada</string>
    <string name="txtCentrodeTrabajo">Centro de Trabajo</string>
    <string name="centroHorSel">Centro:</string>
    <string name="txtEmpleado">Empleado:</string>
    <string name="mensajesMens">Mensajes:</string>
    <string name="btnRecibidoMens">Recibidos</string>
    <string name="btnEnviadoMens">Envíados</string>
    <string name="nuevoMensajeMens">Nuevo Mensaje</string>
    <string name="EnviarMensajeEnvMens">Enviar Mensaje:</string>
    <string name="deEnvMens">De:</string>
    <string name="centroEnvMens">Centro:</string>
    <string name="paraEnvMens">Para:</string>
    <string name="asuntoEnvMens">Asunto:</string>
    <string name="mensajeEnvMens">Mensaje:</string>
    <string name="mensajeHintEnvMens">Mensaje........</string>
    <string name="enviarEnvMens">Envíar Mensaje</string>
    <string name="deRespMens">De:</string>
    <string name="paraRespMens">Para:</string>
    <string name="fechaRespMens">Fecha:</string>
    <string name="asuntoRespMens">Asunto:</string>
    <string name="mensajeRespMens">Mensaje:</string>
    <string name="mensajeHintRespMens">Mensaje......</string>
    <string name="contestarRespMens">Contestar</string>
    <string name="responderRespMens">Responder Mensaje:</string>
    <string name="anioHorSel">Año</string>
    <string name="informeInfEmp">Informe:</string>
    <string name="anioInfEmp">Año:</string>
    <string name="mesInfEmp">Mes:</string>
    <string name="diaInfEmp">Día:</string>
    <string name="fechaInfEmp">Fecha:</string>
    <string name="horasDiasInfEmp">Horas trabajadas en el día:</string>
    <string name="horasSemanaInfEmp">Horas trabajadas en la semana:</string>
    <string name="horasMesInfEmp">Horas trabajadas este mes:</string>
    <string name="entradaInfEmp">Entrada:</string>
    <string name="salidaInfEmp">Salida:</string>
    <string name="BtnCalendarDesde">Fecha desde</string>
    <string name="BtnHoraSalida">Hora Salida</string>
    <string name="BtnHoraEntrada">Hora Entrada</string>
    <string name="BtnCalendarHasta">Fecha Hasta</string>
    <string name="CiudadPerAdm">Ciudad:</string>
    <string name="HintCiudadPerAdm">Ciudad</string>
    <string name="CambiarContraseña">Cambiar Contraseña</string>
    <string name="txtCambiarContrasena">Cambiar Contraseña:</string>
    <string name="edtiContrasena">Password</string>
    <string name="editRepeatContrasena">Repeat Password</string>
    <string name="tittleDialog">Cambiar Contraseña:</string>
    <string name="buttonCambiar">Actualizar Contraseña</string>
</resources>