<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#539F56"
    tools:context=".UsuarioSesion">

    <ImageView
        android:id="@+id/logoUsrProfile"
        android:layout_width="113dp"
        android:layout_height="65dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textFechaUsrProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechaUsrProfile"
        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199"
        tools:text="Fecha:" />

    <TextView
        android:id="@+id/textHoraInUsrProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/horaInUsrProfile"
        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textFechaUsrProfile"
        app:layout_constraintTop_toTopOf="@id/textFechaUsrProfile"
        app:layout_constraintVertical_bias="0.060000002"
        tools:text="Hora Entrada:" />

    <TextView
        android:id="@+id/textHoraOutUsrProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HoraOutUsrProfile"
        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textHoraInUsrProfile"
        app:layout_constraintTop_toTopOf="@id/textHoraInUsrProfile"
        app:layout_constraintVertical_bias="0.060000002"
        tools:text="Hora Salida:" />

    <TextView
        android:id="@+id/textTitleUsrProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userProfile"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <Button
        android:id="@+id/btnEntradaUsrProfile"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:backgroundTint="#8BC34A"
        android:text="@string/ficharEntrada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358" />

    <Button
        android:id="@+id/btnSalidaUsrProfile"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E91E63"
        android:text="@string/ficharSalida"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.358" />

    <Button
        android:id="@+id/btnPerfil"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:backgroundTint="#19635C"
        android:text="@string/perfil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnHorario"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:backgroundTint="#19635C"
        android:text="@string/horario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.658" />

    <Button
        android:id="@+id/btnMensajes"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:backgroundTint="#19635C"
        android:text="@string/mensajes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.826" />
</androidx.constraintlayout.widget.ConstraintLayout>