<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#539F56"
    android:backgroundTint="#539F56"
    tools:context=".activities.mensajes.ResponderMensaje">

    <ImageView
        android:id="@+id/logoRespMens"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/logo"
        tools:layout_conversion_absoluteHeight="72dp"
        tools:layout_conversion_absoluteWidth="117dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnVolverRespMens"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#19635C"
        android:contentDescription="@string/volver"
        android:foregroundGravity="center"
        android:src="@android:drawable/ic_menu_revert"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.957"
        app:rippleColor="#FFFFFF" />

    <Button
        android:id="@+id/btnContestarRespMens"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:backgroundTint="#19635C"
        android:text="@string/contestarRespMens"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865" />

    <TextView
        android:id="@+id/textTitleeRespMens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/responderRespMens"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09"
        tools:layout_conversion_absoluteHeight="33dp"
        tools:layout_conversion_absoluteWidth="178dp"
        tools:text="Responder Mensaje:" />

    <TextView
        android:id="@+id/txtMensajeRespMens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensajeRespMens"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtFechaRespMens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechaRespMens"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.212" />

    <TextView
        android:id="@+id/txtParaRespMens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paraRespMens"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <TextView
        android:id="@+id/txtAsuntoRespMens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/asuntoRespMens"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414" />

    <TextView
        android:id="@+id/txtDeRespMens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deRespMens"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <EditText
        android:id="@+id/editMensajeEnvMens"
        android:layout_width="292dp"
        android:layout_height="160dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FBFBFB"
        android:backgroundTintMode="screen"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/mensajeHintRespMens"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.705" />

</androidx.constraintlayout.widget.ConstraintLayout>