<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center|center_vertical"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:background="#4E4E4E"
        android:scaleType="center"
        app:srcCompat="@mipmap/ic_logo_foreground" />

    <TextView
        android:id="@+id/textTittleDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittleDialog"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editContrasenaDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/edtiContrasena"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editRepeatContrasenaDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/editRepeatContrasena"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnActualizarContraDialog"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:text="@string/buttonCambiar"
        android:textColor="#000000"
        android:textSize="20sp" />

</LinearLayout>